--- a/src/Cabecalho.css
+++ b/src/Cabecalho.css
@@ -55,3 +55,31 @@ a {
   visibility: visible;
   opacity: 0.8;
 }
+
+@media (max-width: 1024px) {
+  a {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 760px) {
+  a {
+    margin: 0 15px;
+  }
+  nav {
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 560px) {
+  .cabecalho {
+    height: 50px;
+  }
+  a {
+    font-size: 15px;
+    margin: 0 8px;
+  }
+  nav {
+    margin-right: 5px;
+  }
+}
