--- a/src/SobreNos.css
+++ b/src/SobreNos.css
@@ -1,6 +1,5 @@
 .sobreNos {
-  height: 650px;
-  margin: 120px;
+  margin: 120px 100px;
 }
 
 .container_sobreNos {
@@ -10,18 +9,18 @@
 }
 
 .titulo_SobreNos {
+  font-size: 50px;
   color: var(--verde);
   font-weight: 700;
-  font-size: 55px;
   margin-bottom: 50px;
 }
 
 .paragrafo_sobreNos {
+  font-size: 24px;
   color: var(--verde);
   font-weight: 400;
-  font-size: 24px;
-  line-height: 1.8;
-  padding: 0 200px 0 0;
+  line-height: 1.5;
+  padding: 0 150px 0 0;
   margin-bottom: 20px;
 }
 
@@ -33,5 +32,54 @@
 }
 
 .img {
-  height: 350px;
+  height: 230px;
+}
+
+@media (max-width: 1024px) {
+  .sobreNos {
+    margin: 80px 60px;
+  }
+  .paragrafo_sobreNos {
+    font-size: 22px;
+    padding: 0 100px 0 0;
+  }
+  .img {
+    height: 180px;
+  }
+}
+
+@media (max-width: 780px) {
+  .sobreNos {
+    margin: 60px 30px;
+  }
+  .container_sobreNos {
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+  }
+  .container_imagem {
+    flex-direction: row;
+  }
+  .titulo_SobreNos {
+    font-size: 35px;
+    text-align: center;
+  }
+  .paragrafo_sobreNos {
+    font-size: 19px;
+    padding: 0;
+    line-height: 1.3;
+  }
+  .img {
+    height: 120px;
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 560px) {
+  .sobreNos {
+    margin: 60px 20px;
+  }
+  .paragrafo_sobreNos {
+    font-size: 17px;
+  }
 }
