--- a/src/Servicos.css
+++ b/src/Servicos.css
@@ -42,6 +42,10 @@
   padding: 50px 0;
   margin-top: 50px;
   line-height: 1.5;
+  text-align: left;
+}
+li {
+  margin-left: 40px;
 }
 li::marker {
   font-size: 12px;
@@ -49,6 +53,9 @@ li::marker {
 li::before {
   content: "•";
   margin-right: 10px;
+}
+.tec-enfermagem-mobile {
+  display: none;
 }
 
 @media (max-width: 1024px) {
@@ -80,6 +87,9 @@ li::before {
     line-height: 1.5;
     border: 4px solid rgba(75, 131, 76, 0.5);
   }
+  li {
+    margin-left: 35px;
+  }
 }
 @media (max-width: 780px) {
   .especialiades {
@@ -110,6 +120,9 @@ li::before {
     line-height: 1.5;
     border: 4px solid rgba(75, 131, 76, 0.5);
   }
+  li {
+    margin-left: 24px;
+  }
 }
 
 @media (max-width: 560px) {
@@ -128,7 +141,7 @@ li::before {
     margin-left: -40px;
   }
   .especialiades-descricao {
-    width: 150px;
+    width: 155px;
     text-align: center;
     justify-self: center;
     margin-left: -40px;
@@ -145,6 +158,18 @@ li::before {
     border: 3px solid rgba(75, 131, 76, 0.5);
     padding: 20px 0;
     margin-top: 20px;
-    line-height: 1.2;
+    line-height: 1.3;
+  }
+  li::before {
+    margin-right: 5px;
+  }
+  li {
+    margin-left: 10px;
+  }
+  .tec-enfermagem-mobile {
+    display: flex;
+  }
+  .tec-enfermagem {
+    display: none;
   }
 }
