--- a/src/Relatos.css
+++ b/src/Relatos.css
@@ -1,5 +1,5 @@
 .relatos {
-  background-color: var(--bege);
+  background-color: var(--branco);
   padding: 50px;
 }
 .relatos-titulo {
@@ -12,35 +12,36 @@
 .relatos-container {
   max-width: 1024px;
   margin: 0 auto;
+  list-style: none;
+}
+.relato-lista {
+  list-style: none;
+  background-color: var(--bege);
   display: flex;
   flex-direction: column;
+  margin: 20px 0;
+  padding: 20px;
 }
-.relato-01 {
-  width: 350px;
-  margin-top: 50px;
+.relato-texto {
+  color: var(--verde);
+  font-size: 20px;
 }
-.relato-02 {
-  width: 300px;
-  margin-top: 30px;
+.relato-nome {
+  font-size: 18px;
+  text-align: right;
 }
-
-@media (max-width: 1024px) {
-}
-
 @media (max-width: 780px) {
   .relatos-container {
     max-width: 560px;
   }
   .relatos-titulo {
-    font-size: 35px;
+    font-size: 30px;
   }
-  .relato-01 {
-    width: 270px;
-    margin-top: 50px;
+  .relato-texto {
+    font-size: 18px;
   }
-  .relato-02 {
-    width: 250px;
-    margin-top: 30px;
+  .relato-nome {
+    font-size: 16px;
   }
 }
 
@@ -50,13 +51,12 @@
   }
   .relatos-titulo {
     font-size: 28px;
+    text-align: center;
   }
-  .relato-01 {
-    width: 200px;
-    margin-top: 50px;
+  .relato-texto {
+    font-size: 16px;
   }
-  .relato-02 {
-    width: 200px;
-    margin-top: 30px;
+  .relato-nome {
+    font-size: 15px;
   }
 }
