--- a/src/SobreNos.css
+++ b/src/SobreNos.css
@@ -9,14 +9,14 @@
 }
 
 .titulo_SobreNos {
-  font-size: 50px;
+  font-size: 45px;
   color: var(--verde);
   font-weight: 700;
   margin-bottom: 50px;
 }
 
 .paragrafo_sobreNos {
-  font-size: 24px;
+  font-size: 22px;
   color: var(--verde);
   font-weight: 400;
   line-height: 1.5;
@@ -61,7 +61,7 @@
     flex-direction: row;
   }
   .titulo_SobreNos {
-    font-size: 35px;
+    font-size: 30px;
     text-align: center;
   }
   .paragrafo_sobreNos {
@@ -79,8 +79,11 @@
   .sobreNos {
     margin: 60px 20px;
   }
+  .titulo_SobreNos {
+    font-size: 28px;
+  }
   .paragrafo_sobreNos {
-    font-size: 17px;
+    font-size: 16px;
   }
   .img {
     height: 100px;
