--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,7 +1,7 @@
 .container_banner {
   display: flex;
   background-size: 100%;
-  background-image: url("./img/img-banner.png");
+  background-image: url("./img/img-banner.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   align-items: center;
