--- a/src/Servicos.css
+++ b/src/Servicos.css
@@ -5,52 +5,55 @@
   margin: 0 auto 50px auto;
   padding: 0 20px;
 }
-.especialiades-imagens {
-  display: grid;
+.especialidades-texto {
   justify-self: center;
-}
-.img-profissionais {
-  width: 550px;
-  border: 4px solid var(--verde);
-  margin-left: -40px;
-}
-.img-logo {
-  width: 400px;
-  justify-self: center;
-  margin-top: 40px;
-  margin-left: -40px;
-}
-.especialiades-descricao {
-  width: 440px;
   text-align: center;
-  justify-self: center;
-  margin-left: -105px;
+  margin-top: 45px;
+}
+.paragrafo-texto {
+  color: var(--verde);
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: 20px;
+  margin-right: 50px;
+  text-align: left;
+  text-indent: 15px;
 }
 .botao_contato {
   background-color: var(--verde);
+  color: var(--branco);
   padding: 8px 45px;
   border-radius: 15px;
   font-size: 25px;
   cursor: pointer;
   transition: 0.5s;
   border: 3px solid transparent;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 30px;
 }
 .botao_contato:hover {
   background-color: transparent;
   border-color: var(--verde);
   color: var(--verde);
 }
-
+.especialiades-descricao {
+  width: 390px;
+  text-align: center;
+  justify-self: center;
+}
 .especialidades-lista {
   list-style: none;
   color: var(--verde);
-  font-size: 28px;
-  border: 6px solid rgba(75, 131, 76, 0.5);
+  font-size: 24px;
+  border: 3px solid rgba(75, 131, 76, 0.5);
   border-radius: 15px;
   background-color: rgba(241, 255, 241, 0.5);
-  padding: 50px 0 50px 40px;
+  padding: 50px 0 50px 35px;
   margin-top: 50px;
-  line-height: 1.5;
+  line-height: 1.6;
   text-align: left;
 }
 .tec-enfermagem {
@@ -81,29 +84,22 @@
     max-width: 780px;
     margin: 0 auto 50px auto;
   }
-  .img-profissionais {
-    width: 400px;
-    margin-left: -68px;
-  }
-  .img-logo {
-    width: 250px;
-    margin-top: 0px;
-    margin-left: -68px;
+  .paragrafo-texto {
+    font-size: 20px;
   }
   .botao_contato {
     padding: 6px 30px;
-    font-size: 24px;
+    font-size: 22px;
   }
   .especialiades-descricao {
-    width: 400px;
-    margin-left: -100px;
+    width: 350px;
   }
   .especialidades-lista {
-    font-size: 24px;
-    padding: 30px 0 30px 50px;
+    font-size: 22px;
+    padding: 30px 0 30px 35px;
     margin-top: 40px;
     line-height: 1.5;
-    border: 4px solid rgba(75, 131, 76, 0.5);
+    border: 3px solid rgba(75, 131, 76, 0.5);
   }
   .tec-enfermagem {
     margin-left: 0px;
@@ -117,65 +113,71 @@
 @media (max-width: 780px) {
   .especialiades {
     max-width: 560px;
-    margin: 50px auto;
+    margin: 45px auto;
   }
-  .img-profissionais {
-    width: 260px;
-    margin-left: -25px;
+  .paragrafo-texto {
+    font-size: 18px;
   }
-  .img-logo {
-    width: 200px;
+  .especialidades-texto {
     margin-top: 0px;
-    margin-left: -25px;
+  }
+  .paragrafo-texto {
+    margin-right: 10px;
   }
   .botao_contato {
     padding: 6px 20px;
     font-size: 18px;
   }
   .especialiades-descricao {
-    width: 280px;
-    margin-left: -50px;
+    width: 210px;
+    margin-left: 0px;
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
   }
   .especialidades-lista {
-    font-size: 19px;
-    padding: 25px 0 25px 25px;
-    margin-top: 30px;
+    width: 210px;
+    font-size: 18px;
+    padding: 25px 0 25px 10px;
+    margin-top: 0px;
+    margin-bottom: 80px;
+    margin-left: 20px;
     line-height: 1.5;
-    border: 4px solid rgba(75, 131, 76, 0.5);
+    border: 2px solid rgba(75, 131, 76, 0.5);
   }
   .li-servicos {
     margin-left: 0px;
     width: auto;
   }
   .tec-enfermagem {
+    display: none;
+  }
+  .tec-enfermagem-mobile {
     margin-left: 0px;
     width: auto;
+    display: flex;
   }
   .li-servicos::before {
     margin-right: 5px;
   }
-  .tec-enfermagem::before {
+  .tec-enfermagem-mobile::before {
+    content: "•";
     margin-right: 5px;
   }
 }
 
 @media (max-width: 560px) {
   .especialiades {
-    max-width: 320px;
-    padding: 0 10px;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    max-width: 350px;
+    padding: 0px;
   }
-  .img-profissionais {
-    width: 160px;
-    border: 2px solid var(--verde);
-    margin-left: -30px;
-  }
-  .img-logo {
-    width: 100px;
-    margin-top: 0px;
-    margin-left: -40px;
+  .paragrafo-texto {
+    font-size: 13px;
   }
   .especialiades-descricao {
-    width: 160px;
+    width: 180px;
     text-align: center;
     justify-self: center;
     margin-left: -40px;
@@ -188,17 +190,17 @@
     margin-left: 10px;
   }
   .especialidades-lista {
-    font-size: 15px;
-    border: 3px solid rgba(75, 131, 76, 0.5);
+    font-size: 14px;
+    border: 2px solid rgba(75, 131, 76, 0.5);
     padding: 20px 0;
     margin-top: 20px;
-    line-height: 1.3;
+    line-height: 1.8;
   }
   .li-servicos::before {
     margin-right: 5px;
   }
   .li-servicos {
-    margin-left: 13px;
+    margin-left: 10px;
   }
   .tec-enfermagem-mobile {
     display: inline;
